ci: Wildcard branch targeting

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,12 +13,12 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ v2/contrib, v3/contrib, v4/contrib ]
+    branches: [ v**/contrib ]
     paths:
       - 'src/**'
       - '.github/workflows/codeql-analysis.yml'
   pull_request:
-    branches: [ v2/contrib, v3/contrib, v4/contrib ]
+    branches: [ v**/contrib ]
     paths:
       - 'src/**'
       - '.github/workflows/codeql-analysis.yml'
