--- a/src/Nikcio.UHeadless.IntegrationTests.TestProject/uSync/v9/Content/homepage.config
+++ b/src/Nikcio.UHeadless.IntegrationTests.TestProject/uSync/v9/Content/homepage.config
@@ -20,7 +20,31 @@
       <Value><![CDATA[]]></Value>
     </audio>
     <blockList>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[{
+  "layout": {
+    "Umbraco.BlockList": [
+      {
+        "contentUdi": "umb://element/ef8528ba1122426897fd413d6cc23f2c"
+      },
+      {
+        "contentUdi": "umb://element/5657c1f547464beda580bb97124944fc"
+      }
+    ]
+  },
+  "contentData": [
+    {
+      "contentTypeKey": "844d5a6b-1671-4cd0-b988-11247744b065",
+      "udi": "umb://element/ef8528ba1122426897fd413d6cc23f2c",
+      "multinodeTreepicker": "umb://document/af060c574e6a43ff9a2539bf4389261c"
+    },
+    {
+      "contentTypeKey": "aa819aad-7707-44b7-9cb2-75586b4eee20",
+      "udi": "umb://element/5657c1f547464beda580bb97124944fc",
+      "multiUrlPicker": "[{\"name\":\"UnPublishedPage\",\"udi\":\"umb://document/af060c574e6a43ff9a2539bf4389261c\"},{\"name\":\"UnpublishedSite\",\"udi\":\"umb://document/f894ebb373534439b84c04ed7d283202\"}]"
+    }
+  ],
+  "settingsData": []
+}]]></Value>
     </blockList>
     <checkboxList>
       <Value><![CDATA[[
