wip: Test of content picker issue

--- a/src/Nikcio.UHeadless.IntegrationTests.TestProject/uSync/v9/Content/page-1_lxojmnuj.config
+++ b/src/Nikcio.UHeadless.IntegrationTests.TestProject/uSync/v9/Content/page-1_lxojmnuj.config
@@ -20,7 +20,23 @@
       <Value><![CDATA[]]></Value>
     </audio>
     <blockList>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[{
+  "layout": {
+    "Umbraco.BlockList": [
+      {
+        "contentUdi": "umb://element/f744b3eb98c64c9aab2493895b1c933c"
+      }
+    ]
+  },
+  "contentData": [
+    {
+      "contentTypeKey": "488f41d1-f482-4b62-a59d-50ce45b47e60",
+      "udi": "umb://element/f744b3eb98c64c9aab2493895b1c933c",
+      "contentPicker": "umb://document/adb4301d9efc423ab06b893592147e02"
+    }
+  ],
+  "settingsData": []
+}]]></Value>
     </blockList>
     <checkboxList>
       <Value><![CDATA[[
