test: Fix test data

--- a/src/Nikcio.UHeadless.IntegrationTests.TestProject/uSync/v9/Content/filledpage-2.config
+++ b/src/Nikcio.UHeadless.IntegrationTests.TestProject/uSync/v9/Content/filledpage-2.config
@@ -209,14 +209,13 @@
     <mediaPickerCulture>
       <Value Culture="da"><![CDATA[[
   {
-    "key": "eb4a911e-9676-44ab-80bf-a28c4c696337",
-    "mediaKey": "10641d52-54ac-43d5-9f5e-9074642715bf"
+    "mediaKey": "f297f8da-2938-4e5c-a08b-3a7c83c5cf5d"
   }
 ]]]></Value>
       <Value Culture="en-us"><![CDATA[[
   {
-    "key": "9a5b7330-8b1d-46c9-9d49-00ddfccccf10",
-    "mediaKey": "01164aab-e1f7-4628-9e20-870b49951482"
+    "key": "462dcb5d-173b-46b8-a263-2d25f73ceb88",
+    "mediaKey": "f297f8da-2938-4e5c-a08b-3a7c83c5cf5d"
   }
 ]]]></Value>
     </mediaPickerCulture>
@@ -224,7 +223,7 @@
       <Value><![CDATA[]]></Value>
     </mediaPickerLegacy>
     <mediaPickerLegacyCulture>
-      <Value Culture="da"><![CDATA[umb://media/d63551712e044b73b11b01f408ec242a]]></Value>
+      <Value Culture="da"><![CDATA[umb://media/b61135300ccf400688d43dcd31c8297e]]></Value>
       <Value Culture="en-us"><![CDATA[umb://media/25ba1577a0c543298f329e9abe4a6d2d]]></Value>
     </mediaPickerLegacyCulture>
     <memberGroupPicker>
@@ -286,7 +285,7 @@
       <Value><![CDATA[]]></Value>
     </multipleMediaPickerLegacy>
     <multipleMediaPickerLegacyCulture>
-      <Value Culture="da"><![CDATA[umb://media/343c83c917824db58e13cdcddf7ab772,umb://media/01164aabe1f746289e20870b49951482,umb://media/d63551712e044b73b11b01f408ec242a,umb://media/10641d5254ac43d59f5e9074642715bf]]></Value>
+      <Value Culture="da"><![CDATA[umb://media/343c83c917824db58e13cdcddf7ab772,umb://media/f297f8da29384e5ca08b3a7c83c5cf5d]]></Value>
       <Value Culture="en-us"><![CDATA[umb://media/40e37a26857047ddb30aa1bd391f603b,umb://media/25ba1577a0c543298f329e9abe4a6d2d]]></Value>
     </multipleMediaPickerLegacyCulture>
     <multiUrlPicker>
