--- a/src/Nikcio.UHeadless.IntegrationTests.TestProject/uSync/v9/Content/filledpage-3.config
+++ b/src/Nikcio.UHeadless.IntegrationTests.TestProject/uSync/v9/Content/filledpage-3.config
@@ -23,13 +23,13 @@
       <Value><![CDATA[]]></Value>
     </article>
     <articleCulture>
-      <Value Culture="en-us"><![CDATA[]]></Value>
+      <Value Culture="da"><![CDATA[]]></Value>
     </articleCulture>
     <audio>
       <Value><![CDATA[]]></Value>
     </audio>
     <audioCulture>
-      <Value Culture="en-us"><![CDATA[]]></Value>
+      <Value Culture="da"><![CDATA[]]></Value>
     </audioCulture>
     <blockList>
       <Value><![CDATA[]]></Value>
@@ -171,13 +171,13 @@
       <Value><![CDATA[]]></Value>
     </file>
     <fileCulture>
-      <Value Culture="en-us"><![CDATA[]]></Value>
+      <Value Culture="da"><![CDATA[]]></Value>
     </fileCulture>
     <imageCropper>
       <Value><![CDATA[]]></Value>
     </imageCropper>
     <imageCropperCulture>
-      <Value Culture="en-us"><![CDATA[]]></Value>
+      <Value Culture="da"><![CDATA[]]></Value>
     </imageCropperCulture>
     <imageMediaPicker>
       <Value><![CDATA[[]]]></Value>
@@ -209,14 +209,14 @@
     <mediaPickerCulture>
       <Value Culture="da"><![CDATA[[
   {
-    "key": "eb4a911e-9676-44ab-80bf-a28c4c696337",
-    "mediaKey": "10641d52-54ac-43d5-9f5e-9074642715bf"
+    "key": "55cb6540-229b-4c33-8bee-e8c26f99bc57",
+    "mediaKey": "b6113530-0ccf-4006-88d4-3dcd31c8297e"
   }
 ]]]></Value>
       <Value Culture="en-us"><![CDATA[[
   {
-    "key": "9a5b7330-8b1d-46c9-9d49-00ddfccccf10",
-    "mediaKey": "01164aab-e1f7-4628-9e20-870b49951482"
+    "key": "ce308298-fbb3-450c-a27f-bc0eddf4b950",
+    "mediaKey": "b6113530-0ccf-4006-88d4-3dcd31c8297e"
   }
 ]]]></Value>
     </mediaPickerCulture>
@@ -224,27 +224,26 @@
       <Value><![CDATA[]]></Value>
     </mediaPickerLegacy>
     <mediaPickerLegacyCulture>
-      <Value Culture="da"><![CDATA[umb://media/d63551712e044b73b11b01f408ec242a]]></Value>
+      <Value Culture="da"><![CDATA[umb://media/b61135300ccf400688d43dcd31c8297e]]></Value>
       <Value Culture="en-us"><![CDATA[umb://media/25ba1577a0c543298f329e9abe4a6d2d]]></Value>
     </mediaPickerLegacyCulture>
     <memberGroupPicker>
       <Value><![CDATA[]]></Value>
     </memberGroupPicker>
     <memberGroupPickerCulture>
-      <Value Culture="en-us"><![CDATA[]]></Value>
+      <Value Culture="da"><![CDATA[]]></Value>
     </memberGroupPickerCulture>
     <memberPicker>
       <Value><![CDATA[]]></Value>
     </memberPicker>
     <memberPickerCulture>
-      <Value Culture="en-us"><![CDATA[]]></Value>
+      <Value Culture="da"><![CDATA[]]></Value>
     </memberPickerCulture>
     <multinodeTreepicker>
       <Value><![CDATA[]]></Value>
     </multinodeTreepicker>
     <multinodeTreepickerCulture>
       <Value Culture="da"><![CDATA[umb://document/3fa4a316249b487f8d9e007581f7b748,umb://document/82ec95bd6551421dacf3e7571cef4efe]]></Value>
-      <Value Culture="en-us"><![CDATA[]]></Value>
     </multinodeTreepickerCulture>
     <multipleImageMediaPicker>
       <Value><![CDATA[[]]]></Value>
@@ -287,7 +286,7 @@
       <Value><![CDATA[]]></Value>
     </multipleMediaPickerLegacy>
     <multipleMediaPickerLegacyCulture>
-      <Value Culture="da"><![CDATA[umb://media/343c83c917824db58e13cdcddf7ab772,umb://media/01164aabe1f746289e20870b49951482,umb://media/d63551712e044b73b11b01f408ec242a,umb://media/10641d5254ac43d59f5e9074642715bf]]></Value>
+      <Value Culture="da"><![CDATA[umb://media/343c83c917824db58e13cdcddf7ab772,umb://media/f297f8da29384e5ca08b3a7c83c5cf5d]]></Value>
       <Value Culture="en-us"><![CDATA[umb://media/40e37a26857047ddb30aa1bd391f603b,umb://media/25ba1577a0c543298f329e9abe4a6d2d]]></Value>
     </multipleMediaPickerLegacyCulture>
     <multiUrlPicker>
@@ -300,14 +299,12 @@
     "udi": "umb://document/3fa4a316249b487f8d9e007581f7b748"
   }
 ]]]></Value>
-      <Value Culture="en-us"><![CDATA[]]></Value>
     </multiUrlPickerCulture>
     <numeric>
       <Value><![CDATA[]]></Value>
     </numeric>
     <numericCulture>
       <Value Culture="da"><![CDATA[8765678]]></Value>
-      <Value Culture="en-us"><![CDATA[]]></Value>
     </numericCulture>
     <radiobox>
       <Value><![CDATA[]]></Value>
@@ -322,7 +319,6 @@
     <repeatableTextstringsCulture>
       <Value Culture="da"><![CDATA[fafas
 fds]]></Value>
-      <Value Culture="en-us"><![CDATA[]]></Value>
     </repeatableTextstringsCulture>
     <richtext>
       <Value><![CDATA[]]></Value>
@@ -342,7 +338,7 @@ fds]]></Value>
       <Value><![CDATA[]]></Value>
     </svg>
     <svgCulture>
-      <Value Culture="en-us"><![CDATA[]]></Value>
+      <Value Culture="da"><![CDATA[]]></Value>
     </svgCulture>
     <tags>
       <Value><![CDATA[]]></Value>
@@ -387,7 +383,7 @@ fds]]></Value>
       <Value><![CDATA[]]></Value>
     </video>
     <videoCulture>
-      <Value Culture="en-us"><![CDATA[]]></Value>
+      <Value Culture="da"><![CDATA[]]></Value>
     </videoCulture>
   </Properties>
 </Content>
