test: Change approch for integration tests to make them run faster

--- a/src/Nikcio.UHeadless.IntegrationTests.TestProject/uSync/v9/Content/filledpage-2.config
+++ b/src/Nikcio.UHeadless.IntegrationTests.TestProject/uSync/v9/Content/filledpage-2.config
@@ -209,6 +209,7 @@
     <mediaPickerCulture>
       <Value Culture="da"><![CDATA[[
   {
+    "key": "c53ab6a4-a88f-4d5d-abe6-5ffad89ed5fa",
     "mediaKey": "f297f8da-2938-4e5c-a08b-3a7c83c5cf5d"
   }
 ]]]></Value>
