test: Fixed test data

--- a/src/Nikcio.UHeadless.IntegrationTests.TestProject/uSync/v9/Content/filledpage-1.config
+++ b/src/Nikcio.UHeadless.IntegrationTests.TestProject/uSync/v9/Content/filledpage-1.config
@@ -1,19 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="118fde67-8217-4c26-9234-4054cc2b1396" Alias="FilledPage" Level="2">
+<Content Key="cddeaa98-4e15-4614-850a-1a989d8146ee" Alias="FilledPage (1)" Level="101">
   <Info>
-    <Parent Key="d0351e46-e0bf-4eaa-ad2b-57a45451097e">Site with culture</Parent>
-    <Path>/SiteWithCulture/FilledPage</Path>
-    <Trashed>false</Trashed>
+    <Parent Key="00000000-0000-0000-0000-000000000000"></Parent>
+    <Path>/[-20]/FilledPage1</Path>
+    <Trashed Parent="d0351e46-e0bf-4eaa-ad2b-57a45451097e">true</Trashed>
     <ContentType>defaultCulture</ContentType>
-    <CreateDate>2023-05-16T14:36:29</CreateDate>
-    <NodeName Default="FilledPage">
-      <Name Culture="da">FilledPage (DA)</Name>
-      <Name Culture="en-us">FilledPage</Name>
+    <CreateDate>2023-05-20T17:06:22</CreateDate>
+    <NodeName Default="FilledPage (1)">
+      <Name Culture="da">FilledPage (DA) (1)</Name>
+      <Name Culture="en-us">FilledPage (1)</Name>
     </NodeName>
-    <SortOrder>3</SortOrder>
+    <SortOrder>1</SortOrder>
     <Published Default="true">
       <Published Culture="da">true</Published>
-      <Published Culture="en-us">true</Published>
+      <Published Culture="en-us">false</Published>
     </Published>
     <Schedule />
     <Template />
@@ -23,13 +23,13 @@
       <Value><![CDATA[]]></Value>
     </article>
     <articleCulture>
-      <Value Culture="da"><![CDATA[]]></Value>
+      <Value><![CDATA[]]></Value>
     </articleCulture>
     <audio>
       <Value><![CDATA[]]></Value>
     </audio>
     <audioCulture>
-      <Value Culture="da"><![CDATA[]]></Value>
+      <Value><![CDATA[]]></Value>
     </audioCulture>
     <blockList>
       <Value><![CDATA[]]></Value>
@@ -39,22 +39,22 @@
   "layout": {
     "Umbraco.BlockList": [
       {
-        "contentUdi": "umb://element/ae48b0d2ac8b4341a4abf2894549b5a5"
+        "contentUdi": "umb://element/0ff08472368949c880233cf963e12d4f"
       },
       {
-        "contentUdi": "umb://element/4b6331a075824feda4dfe353c1c1861a"
+        "contentUdi": "umb://element/c6c708daae17411b9ee7be673d6ac49d"
       }
     ]
   },
   "contentData": [
     {
       "contentTypeKey": "85a55d92-c438-46c5-bc1c-ddffd41344d9",
-      "udi": "umb://element/ae48b0d2ac8b4341a4abf2894549b5a5",
+      "udi": "umb://element/0ff08472368949c880233cf963e12d4f",
       "decimal": "678"
     },
     {
       "contentTypeKey": "6c5cceb5-f30d-405c-a4a8-c82f685b533e",
-      "udi": "umb://element/4b6331a075824feda4dfe353c1c1861a",
+      "udi": "umb://element/c6c708daae17411b9ee7be673d6ac49d",
       "dropdown": "[\"Andy\"]"
     }
   ],
@@ -64,22 +64,22 @@
   "layout": {
     "Umbraco.BlockList": [
       {
-        "contentUdi": "umb://element/0b127b9e01da4e8197f6a4ceabd1615f"
+        "contentUdi": "umb://element/949dbea8c8be4b1683436e2afdbb3655"
       },
       {
-        "contentUdi": "umb://element/3e70c29430ec4f46acc98e4b9f78b279"
+        "contentUdi": "umb://element/480ac1b48d004d98a251516319ad335b"
       }
     ]
   },
   "contentData": [
     {
       "contentTypeKey": "15d42001-fcfb-4981-b634-4919b8d085a6",
-      "udi": "umb://element/0b127b9e01da4e8197f6a4ceabd1615f",
+      "udi": "umb://element/949dbea8c8be4b1683436e2afdbb3655",
       "checkboxList": "[\"3\"]"
     },
     {
       "contentTypeKey": "cf161551-8ca7-4aab-bbdc-8a3718af7f44",
-      "udi": "umb://element/3e70c29430ec4f46acc98e4b9f78b279",
+      "udi": "umb://element/480ac1b48d004d98a251516319ad335b",
       "colorPicker": "{\n  \"value\": \"f44336\",\n  \"label\": \"f44336\",\n  \"sortOrder\": 1,\n  \"id\": \"2\"\n}"
     }
   ],
@@ -171,13 +171,13 @@
       <Value><![CDATA[]]></Value>
     </file>
     <fileCulture>
-      <Value Culture="da"><![CDATA[]]></Value>
+      <Value><![CDATA[]]></Value>
     </fileCulture>
     <imageCropper>
       <Value><![CDATA[]]></Value>
     </imageCropper>
     <imageCropperCulture>
-      <Value Culture="da"><![CDATA[]]></Value>
+      <Value><![CDATA[]]></Value>
     </imageCropperCulture>
     <imageMediaPicker>
       <Value><![CDATA[[]]]></Value>
@@ -231,13 +231,13 @@
       <Value><![CDATA[]]></Value>
     </memberGroupPicker>
     <memberGroupPickerCulture>
-      <Value Culture="da"><![CDATA[]]></Value>
+      <Value><![CDATA[]]></Value>
     </memberGroupPickerCulture>
     <memberPicker>
       <Value><![CDATA[]]></Value>
     </memberPicker>
     <memberPickerCulture>
-      <Value Culture="da"><![CDATA[]]></Value>
+      <Value><![CDATA[]]></Value>
     </memberPickerCulture>
     <multinodeTreepicker>
       <Value><![CDATA[]]></Value>
@@ -338,18 +338,14 @@ fds]]></Value>
       <Value><![CDATA[]]></Value>
     </svg>
     <svgCulture>
-      <Value Culture="da"><![CDATA[]]></Value>
+      <Value><![CDATA[]]></Value>
     </svgCulture>
     <tags>
       <Value><![CDATA[]]></Value>
     </tags>
     <tagsCulture>
       <Value Culture="da"><![CDATA[[
-  "odd",
-  "normal"
-]]]></Value>
-      <Value Culture="en-us"><![CDATA[[
-  "normal"
+  "odd"
 ]]]></Value>
     </tagsCulture>
     <textarea>
@@ -384,7 +380,7 @@ fds]]></Value>
       <Value><![CDATA[]]></Value>
     </video>
     <videoCulture>
-      <Value Culture="da"><![CDATA[]]></Value>
+      <Value><![CDATA[]]></Value>
     </videoCulture>
   </Properties>
 </Content>
