--- a/src/Nikcio.UHeadless.IntegrationTests.TestProject/uSync/v9/Content/filledpage-2.config
+++ b/src/Nikcio.UHeadless.IntegrationTests.TestProject/uSync/v9/Content/filledpage-2.config
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="8ff6a1b8-c7bf-481c-b905-f971ee111646" Alias="FilledPage (2)" Level="2">
+<Content Key="8ff6a1b8-c7bf-481c-b905-f971ee111646" Alias="FilledPage (2)" Level="101">
   <Info>
-    <Parent Key="d0351e46-e0bf-4eaa-ad2b-57a45451097e">Site with culture</Parent>
-    <Path>/SiteWithCulture/FilledPage2</Path>
-    <Trashed>false</Trashed>
+    <Parent Key="00000000-0000-0000-0000-000000000000"></Parent>
+    <Path>/[-20]/FilledPage2</Path>
+    <Trashed Parent="d0351e46-e0bf-4eaa-ad2b-57a45451097e">true</Trashed>
     <ContentType>defaultCulture</ContentType>
     <CreateDate>2023-05-16T14:40:33</CreateDate>
     <NodeName Default="FilledPage (2)">
       <Name Culture="da">FilledPage (DA) (2)</Name>
       <Name Culture="en-us">FilledPage (2)</Name>
     </NodeName>
-    <SortOrder>5</SortOrder>
+    <SortOrder>0</SortOrder>
     <Published Default="true">
       <Published Culture="da">true</Published>
       <Published Culture="en-us">false</Published>
@@ -23,13 +23,13 @@
       <Value><![CDATA[]]></Value>
     </article>
     <articleCulture>
-      <Value Culture="da"><![CDATA[]]></Value>
+      <Value><![CDATA[]]></Value>
     </articleCulture>
     <audio>
       <Value><![CDATA[]]></Value>
     </audio>
     <audioCulture>
-      <Value Culture="da"><![CDATA[]]></Value>
+      <Value><![CDATA[]]></Value>
     </audioCulture>
     <blockList>
       <Value><![CDATA[]]></Value>
@@ -171,13 +171,13 @@
       <Value><![CDATA[]]></Value>
     </file>
     <fileCulture>
-      <Value Culture="da"><![CDATA[]]></Value>
+      <Value><![CDATA[]]></Value>
     </fileCulture>
     <imageCropper>
       <Value><![CDATA[]]></Value>
     </imageCropper>
     <imageCropperCulture>
-      <Value Culture="da"><![CDATA[]]></Value>
+      <Value><![CDATA[]]></Value>
     </imageCropperCulture>
     <imageMediaPicker>
       <Value><![CDATA[[]]]></Value>
@@ -231,13 +231,13 @@
       <Value><![CDATA[]]></Value>
     </memberGroupPicker>
     <memberGroupPickerCulture>
-      <Value Culture="da"><![CDATA[]]></Value>
+      <Value><![CDATA[]]></Value>
     </memberGroupPickerCulture>
     <memberPicker>
       <Value><![CDATA[]]></Value>
     </memberPicker>
     <memberPickerCulture>
-      <Value Culture="da"><![CDATA[]]></Value>
+      <Value><![CDATA[]]></Value>
     </memberPickerCulture>
     <multinodeTreepicker>
       <Value><![CDATA[]]></Value>
@@ -338,17 +338,16 @@ fds]]></Value>
       <Value><![CDATA[]]></Value>
     </svg>
     <svgCulture>
-      <Value Culture="da"><![CDATA[]]></Value>
+      <Value><![CDATA[]]></Value>
     </svgCulture>
     <tags>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[[
+  "no"
+]]]></Value>
     </tags>
     <tagsCulture>
       <Value Culture="da"><![CDATA[[
   "odd"
-]]]></Value>
-      <Value Culture="en-us"><![CDATA[[
-  "normal"
 ]]]></Value>
     </tagsCulture>
     <textarea>
@@ -383,7 +382,7 @@ fds]]></Value>
       <Value><![CDATA[]]></Value>
     </video>
     <videoCulture>
-      <Value Culture="da"><![CDATA[]]></Value>
+      <Value><![CDATA[]]></Value>
     </videoCulture>
   </Properties>
 </Content>
