--- a/src/Nikcio.UHeadless.IntegrationTests.TestProject/uSync/v9/Content/homepage-1.config
+++ b/src/Nikcio.UHeadless.IntegrationTests.TestProject/uSync/v9/Content/homepage-1.config
@@ -1,17 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="82ec95bd-6551-421d-acf3-e7571cef4efe" Alias="Da page" Level="2">
+<Content Key="47b74fef-651e-463b-9aca-f2a25f2b5cac" Alias="Homepage (1)" Level="2">
   <Info>
     <Parent Key="d0351e46-e0bf-4eaa-ad2b-57a45451097e">Site with culture</Parent>
-    <Path>/SiteWithCulture/DaPage</Path>
+    <Path>/SiteWithCulture/Homepage1</Path>
     <Trashed>false</Trashed>
     <ContentType>defaultCulture</ContentType>
-    <CreateDate>2023-05-16T11:57:51</CreateDate>
-    <NodeName Default="Da page">
-      <Name Culture="da">Da page</Name>
+    <CreateDate>2023-05-20T17:08:26</CreateDate>
+    <NodeName Default="Homepage (1)">
+      <Name Culture="da">Published DA</Name>
+      <Name Culture="en-us">Homepage (1)</Name>
     </NodeName>
-    <SortOrder>1</SortOrder>
+    <SortOrder>7</SortOrder>
     <Published Default="true">
       <Published Culture="da">true</Published>
+      <Published Culture="en-us">false</Published>
     </Published>
     <Schedule />
     <Template />
@@ -106,7 +108,6 @@
     </imageMediaPicker>
     <imageMediaPickerCulture>
       <Value Culture="da"><![CDATA[[]]]></Value>
-      <Value Culture="en-us"><![CDATA[[]]]></Value>
     </imageMediaPickerCulture>
     <markdown>
       <Value><![CDATA[]]></Value>
@@ -119,7 +120,6 @@
     </mediaPicker>
     <mediaPickerCulture>
       <Value Culture="da"><![CDATA[[]]]></Value>
-      <Value Culture="en-us"><![CDATA[[]]]></Value>
     </mediaPickerCulture>
     <mediaPickerLegacy>
       <Value><![CDATA[]]></Value>
@@ -150,14 +150,12 @@
     </multipleImageMediaPicker>
     <multipleImageMediaPickerCulture>
       <Value Culture="da"><![CDATA[[]]]></Value>
-      <Value Culture="en-us"><![CDATA[[]]]></Value>
     </multipleImageMediaPickerCulture>
     <multipleMediaPicker>
       <Value><![CDATA[[]]]></Value>
     </multipleMediaPicker>
     <multipleMediaPickerCulture>
       <Value Culture="da"><![CDATA[[]]]></Value>
-      <Value Culture="en-us"><![CDATA[[]]]></Value>
     </multipleMediaPickerCulture>
     <multipleMediaPickerLegacy>
       <Value><![CDATA[]]></Value>
@@ -200,7 +198,6 @@
     </slider>
     <sliderCulture>
       <Value Culture="da"><![CDATA[0]]></Value>
-      <Value Culture="en-us"><![CDATA[0]]></Value>
     </sliderCulture>
     <svg>
       <Value><![CDATA[]]></Value>
@@ -209,14 +206,10 @@
       <Value Culture="da"><![CDATA[]]></Value>
     </svgCulture>
     <tags>
-      <Value><![CDATA[[
-  "unno"
-]]]></Value>
+      <Value><![CDATA[]]></Value>
     </tags>
     <tagsCulture>
-      <Value Culture="da"><![CDATA[[
-  "nononono"
-]]]></Value>
+      <Value Culture="da"><![CDATA[]]></Value>
     </tagsCulture>
     <textarea>
       <Value><![CDATA[]]></Value>
@@ -228,14 +221,13 @@
       <Value><![CDATA[]]></Value>
     </textstring>
     <textstringCulture>
-      <Value Culture="da"><![CDATA[da string]]></Value>
+      <Value Culture="da"><![CDATA[]]></Value>
     </textstringCulture>
     <trueOrFalse>
       <Value><![CDATA[0]]></Value>
     </trueOrFalse>
     <trueOrFalseCulture>
       <Value Culture="da"><![CDATA[0]]></Value>
-      <Value Culture="en-us"><![CDATA[0]]></Value>
     </trueOrFalseCulture>
     <userPicker>
       <Value><![CDATA[]]></Value>
