--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -10,7 +10,7 @@ on:
     paths:
       - 'src/**'
       - '.github/workflows/sonar.yml'
-    types: [opened, synchronize, reopened]
+    # types: [opened, synchronize, reopened]
 
 jobs:
   authorize:
