ci: Ignore paths SonarCloud

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -7,9 +7,8 @@ on:
       - '.github/workflows/sonar.yml'
   pull_request_target:
     # branches: [ v**/contrib ]
-    paths:
-      - 'src/**'
-      - '.github/workflows/sonar.yml'
+    # paths:
+    #   - 'src/**'
     # types: [opened, synchronize, reopened]
 
 jobs:
