--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -5,7 +5,7 @@ on:
     paths:
       - 'src/**'
       - '.github/workflows/sonar.yml'
-  pull_request:
+  pull_request_target:
     branches: [ v**/contrib ]
     paths:
       - 'src/**'
@@ -14,6 +14,7 @@ on:
 
 jobs:
   authorize:
+    name: Authorize
     environment:
       ${{ github.event_name == 'pull_request_target' &&
       github.event.pull_request.head.repo.full_name != github.repository &&
@@ -33,7 +34,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-          ref: ${{ github.event.pull_request.head.sha || github.ref }}
+          ref: ${{ github.event.pull_request.head.sha || github.ref }} # Ensures that the code being analyzed is the PR code.
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
