ci: Add missing work dir

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -77,9 +77,10 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
       working-directory: ./src
-      
+
     - name: Build
       run: dotnet build --no-restore
+      working-directory: ./src
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
