--- a/.github/ISSUE_TEMPLATE/question.yml
+++ b/.github/ISSUE_TEMPLATE/question.yml
@@ -2,7 +2,7 @@ name: "Question"
 description: "Ask a question about the package."
 labels: "question"
 body:
-- type: input
+- type: textarea
   id: "summary"
   attributes:
     label: "Question"
