feat: Added Block grid support

--- a/src/Nikcio.UHeadless.IntegrationTests.TestProject/uSync/v9/ContentTypes/default.config
+++ b/src/Nikcio.UHeadless.IntegrationTests.TestProject/uSync/v9/ContentTypes/default.config
@@ -16,6 +16,7 @@
     </HistoryCleanup>
     <Folder>Pages</Folder>
     <Compositions>
+      <Composition Key="9a94cd5a-f157-4f90-90a3-bfeb7655aa3c">blockGridEditor</Composition>
       <Composition Key="033c3a21-a83a-4392-9726-bad97ada4f31">blockListEditor</Composition>
       <Composition Key="15d42001-fcfb-4981-b634-4919b8d085a6">checkboxListEditor</Composition>
       <Composition Key="cf161551-8ca7-4aab-bbdc-8a3718af7f44">colorPickerEditor</Composition>
