docs: Fix code examples

--- a/src/Examples/Examples.csproj
+++ b/src/Examples/Examples.csproj
@@ -16,6 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\Nikcio.UHeadless.Members\Nikcio.UHeadless.Members.csproj" />
         <ProjectReference Include="..\Nikcio.UHeadless\Nikcio.UHeadless.csproj" />
     </ItemGroup>
 
