ci: Update package manager in deploy

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -22,6 +22,7 @@ jobs:
         uses: withastro/action@v0
         with:
             path: ./docs
+            package-manager: pnpm
 
   deploy:
     needs: build
