--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,14 +17,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Setup .NET 6
-      uses: actions/setup-dotnet@v2
+
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 6.0.x
-    - name: Setup .NET 7
-      uses: actions/setup-dotnet@v2
-      with:
-        dotnet-version: 7.0.x
+        dotnet-version: |
+          6.0.x
+          7.0.x
+
     - uses: actions/cache@v3
       id: cache-nuget-uheadless
       with:
@@ -33,12 +33,15 @@ jobs:
         key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
         restore-keys: |
           ${{ runner.os }}-nuget-uheadless
+
     - name: Restore dependencies
       run: dotnet restore
       working-directory: ./src
+
     - name: Build
       run: dotnet build --no-restore
       working-directory: ./src
+
     - name: Test
       run: dotnet test --no-build --verbosity normal
       working-directory: ./src
