--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,16 +10,17 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+
     - name: Set VERSION variable from tag
       run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
-    - name: Setup .NET 6
-      uses: actions/setup-dotnet@v2
+
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 6.0.x
-    - name: Setup .NET 7
-      uses: actions/setup-dotnet@v2
-      with:
-        dotnet-version: 7.0.x
+        dotnet-version: |
+          6.0.x
+          7.0.x
+
     - uses: actions/cache@v3
       id: cache-nuget-uheadless
       with:
@@ -28,15 +29,19 @@ jobs:
         key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
         restore-keys: |
           ${{ runner.os }}-nuget-uheadless
+
     - name: Restore dependencies
       run: dotnet restore
       working-directory: ./src
+
     - name: Build
       run: dotnet build -c Release --no-restore /p:Version=${VERSION}
       working-directory: ./src
+
     - name: Test
       run: dotnet test -c Release --no-build /p:Version=${VERSION}
       working-directory: ./src
+
     - name: Pack nugets
       run: dotnet pack -c Release --no-build --output ./releases /p:Version=${VERSION}
       working-directory: ./src
