--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -3,6 +3,9 @@ name: Deploy docs to GitHub Pages
 on:
   push:
     branches: [ v4/contrib ]
+    paths:
+      - 'docs/**'
+      - '.github/workflows/deploy-docs.yml'
   # Allows you to run this workflow manually from the Actions tab on GitHub.
   workflow_dispatch:
   
@@ -18,7 +21,7 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v3
-        
+
       - name: Install, build, and upload your site
         uses: withastro/action@v0
         with:
