--- a/src/Nikcio.UHeadless.Base.Creation/Nikcio.UHeadless.Base.Creation.csproj
+++ b/src/Nikcio.UHeadless.Base.Creation/Nikcio.UHeadless.Base.Creation.csproj
@@ -11,7 +11,7 @@
   	<Description>Base for Nikcio.UHeadless.Creation</Description>
   	<Copyright>MIT License</Copyright>
   	<PackageProjectUrl>https://github.com/nikcio/Nikcio.UHeadless</PackageProjectUrl>
-  	<PackageReadmeFile>README.md</PackageReadmeFile>
+  	<PackageReadmeFile>README-creation.md</PackageReadmeFile>
   	<PackageTags>plugin; package; nikcio</PackageTags>
   	<RepositoryUrl>https://github.com/nikcio/Nikcio.UHeadless</RepositoryUrl>
   	<NeutralLanguage>en</NeutralLanguage>
@@ -27,7 +27,7 @@
   	  <Pack>True</Pack>
   	  <PackagePath>\</PackagePath>
   	</None>
-  	<None Include="..\..\README.md">
+  	<None Include="..\..\README-creation.md">
   		<Pack>True</Pack>
   		<PackagePath>\</PackagePath>
   	</None>
