test: Fix tests?

--- a/src/Nikcio.UHeadless.IntegrationTests.TestProject/appsettings.json
+++ b/src/Nikcio.UHeadless.IntegrationTests.TestProject/appsettings.json
@@ -11,7 +11,7 @@
     }
   },
   "ConnectionStrings": {
-    "umbracoDbDSN": "Data Source=UHeadlessTestProject;Cache=Shared",
+    "umbracoDbDSN": "Data Source=UHeadlessTestProject;Mode=Memory;Cache=Shared",
     "umbracoDbDSN_ProviderName": "Microsoft.Data.Sqlite"
   },
   "Umbraco": {
